# dx-cli

./: .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: release-extra-arch.yml  release.yml
scripts/: install.ps1  install.sh
src/: dev_badges.rs  dev_config.rs  dev_dependencies.rs  dev_services.rs  dev_services_config.rs  dev_test.rs  main.rs  report.rs  telemetry.rs
test-projects/flink/: README.md  pom.xml
test-projects/go/: README.md  go.mod  main.go
test-projects/go/internal/handlers/: user_handler.go
test-projects/go/internal/models/: event_producer.go  user.go
test-projects/go/internal/repository/: user_repository.go
test-projects/java-gradle/: README.md  build.gradle  settings.gradle
test-projects/java-gradle/src/main/resources/: application.properties
test-projects/java-maven/: .gitignore  README.md  pom.xml
test-projects/nodejs/: README.md  index.js  package.json
test-projects/php/: README.md  composer.json
test-projects/php/src/Config/: Database.php
test-projects/php/src/Models/: User.php
test-projects/php/src/Services/: RedisService.php
test-projects/python/: README.md  app.py  requirements.txt
test-projects/ruby/: Gemfile  README.md
test-projects/ruby/app/models/: user.rb
test-projects/ruby/config/: database.yml
test-projects/ruby/config/initializers/: redis.rb
tests/: analyzer_gitignore.rs  cli.rs  dev_dependencies.rs  dev_services.rs  dev_services_config.rs
(+14 files in other folders)
