[package]
name = "dx-cli"
version = "0.0.0-ALPHA"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
default-run = "dx"

[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
